--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,267 @@
-.App {
+#root,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
+.app {
+  height: 100%;
+  background: linear-gradient(rgba(20, 20, 56, 0.7), rgba(0, 64, 128, 0.7));
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 600px) {
+  .app {
+    flex-direction: column;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+@media (max-width: 400px) {
+  .app {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.app__title {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  font-family: "Spartan", sans-serif;
+  font-size: 3rem;
   color: white;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.7);
 }
 
-.App-link {
-  color: #61dafb;
+
+.card {
+  background: whitesmoke;
+  width: 40%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  border-radius: 25px;
+  padding: 2%;
+  box-shadow: 10px 10px;
+  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 15px 15px;
+}
+@media (max-width: 600px) {
+  .card {
+    width: 80%;
+    height: 50%;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+@media (max-width: 400px) {
+  .card {
+    width: 100%;
+    height: 60%;
+  }
+}
+
+@media (max-width: 320px) {
+  .card {
+    width: 90%;
+    height: 70%;
+  }
+}
+
+.card__footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(20, 20, 56, 0.7);
+  color: white;
+  font-size: 1.2rem;
+  padding: 1%;
+  border-radius: 0 0 25px 25px;
+}
+
+@media (max-width: 600px) {
+  .card__footer {
+    height: 20%;
+  }
+}
+
+@media (max-width: 400px) {
+  .card__footer {
+    height: 30%;
+  }
+}
+
+@media (max-width: 320px) {
+  .card__footer {
+    height: 40%;
+  }
+}
+
+.card__footer a {
+  color: white;
+  text-decoration: none;
+}
+
+.card__footer a:hover {
+  color: #164ca7;
+}
+
+.heading {
+  display: flex;
+  align-items: center;
+  height: 350px;
+  font-family: "Spartan", sans-serif;
+}
+
+@media (max-width: 600px) {
+  .heading {
+    height: auto;
+  }
+}
+
+@media (max-width: 400px) {
+  .heading {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 320px) {
+  .heading {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
+.button {
+  position: relative;
+  outline: none;
+  text-decoration: none;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  text-transform: uppercase;
+  height: 200px;
+  width: 210px;
+  opacity: 1;
+  background-color: #ffffff;
+  border: 1px solid rgba(22, 76, 167, 0.6);
+}
+
+@media (max-width: 600px) {
+  .button {
+    width: 100%;
+    height: 150px;
+  }
+}
+
+@media (max-width: 400px) {
+  .button {
+    width: 100%;
+    height: 120px;
+  }
+}
+
+@media (max-width: 320px) {
+  .button {
+    width: 90%;
+    height: 100px;
+  }
+}
+
+.button span {
+  color: #164ca7;
+  font-size: 12px;
+  font-weight: 500;
+  letter-spacing: 0.7px;
+}
+
+.button:hover {
+  animation: rotate 0.7s ease-in-out both;
+  -webkit-animation: rotate 0.7s ease-in-out both;
+}
+
+.button:hover span {
+  animation: storm 0.7s ease-in-out both;
+  animation-delay: 0.06s;
+}
+
+@media (max-width: 600px) {
+  .button-tema {
+    width: 100%;
+    height: 150px;
+  }
+}
+
+@media (max-width: 400px) {
+  .button-tema {
+    width: 100%;
+    height: 120px;
+  }
+}
+
+@media (max-width: 320px) {
+  .button-tema {
+    width: 90%;
+    height: 100px;
+  }
+}
+
+.footer__text {
+  color: #fff;
+  font-size: 19px;
+  font-weight: 400;
+  text-align: center;
+  margin-top: 1.5rem;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg) translate3d(0, 0, 0);
+  }
+  25% {
+    transform: rotate(3deg) translate3d(0, 0, 0);
+  }
+  50% {
+    transform: rotate(-3deg) translate3d(0, 0, 0);
+  }
+  75% {
+    transform: rotate(1deg) translate3d(0, 0, 0);
+  }
+  100% {
+    transform: rotate(0deg) translate3d(0, 0, 0);
+  }
+}
+
+@keyframes storm {
+  0% {
+    transform: translate3d(0, 0, 0) translateZ(0);
+  }
+  25% {
+    transform: translate3d(4px, 0, 0) translateZ(0);
+  }
+  50% {
+    transform: translate3d(-3px, 0, 0) translateZ(0);
+  }
+  75% {
+    transform: translate3d(2px, 0, 0) translateZ(0);
+  }
+  100% {
+    transform: translate3d(0, 0, 0) translateZ(0);
   }
 }
